Version 5.6.4 (12/??/2020):
	* Fixed shared libary creation.  Thanks to @ffontaine and Alex Suykov.

Version 5.6.3 (12/23/2020):
	* Fixed missing dmallocc.o <- dmalloc.h dependency.  Thanks to @ffontaine.
	* Fixed more %p usage and issues around pointer arithmetic.  Thanks to aitap.

Version 5.6.2 (12/17/2020):
	* Fixed bug with loc_snprintf use of va_args.  Thanks much to aitap.
	* Handle strndup being a macro.  Thanks much to aitap.
	* Renmaed the ERROR_ and DEBUG_ defines to DMALLOC_* to reduce OS overlap.
	* Fixed issues with cross-compiling and getpagesize.  Thanks to aitap.
	* Fixed problems with cross-compiling and printing of pointers.  Thanks to aitap.

Version 5.6.1 (11/24/2020):
	* Fixed the installdocs target.  Thanks to matthewluckie.

Version 5.6.0 (11/22/2020):
	* Implemented a snprintf to [hopefully] stop recursion.  Thanks to drok.
	* Added append_string and friends for better string output.
	* Fixed strndup handling when it is a macro.  Thanks to danielgora.
	* Fixed strndup configuration and handling in general.
	* Added better getenv handling.
	* Fixed issues around page-size detection and heap extension.
	* Added circleci to github.
	* Improved the test program output.
	* Added strnlen configuration and handling.
	* Moved to git on April 9, 2018.

Version 5.5.2 (5/14/2007):
	* Removed some left-over references to the dmalloc.info file.
	* Fixed some unsigned/signed issues in one of the dmalloc_t tests.
	* Fixed problems with configure and SL_LINK_OBJS.

Version 5.5.1 (3/25/2007):
	* Fixed some problems with str[n]dup argument checking.
	* Fixed bug where LOG_PNT_SEEN_COUNT=0 caused dmalloc_examine segfault.
	* Fixed bug with the checking of the MAX_FILE_LENGTH. 
	* Revamped the tests for user pointers. Added better support for sizes.
	* Added dmalloc_verify_pnt_strsize to support strnlen size testing.
	* Added missing DMALLOC_FUNC_CHECK routines: atoi, atol, memmove
	* Added a number of special checks for DMALLOC_FUNC_CHECK stuff.